# distributor

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deploy_template.sh  generate_kv_proof.sh  package.json
api/: Cargo.toml
cli/: Cargo.toml
command_list/: claim_from_api.sh  deploy_distributor.sh  deploy_distributor_by_slot.sh  deploy_distributor_by_timestamp.sh  deploy_distributor_with_bonus.sh  generate_kv_proof.sh  (+1 more)
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/src/: error.rs  lib.rs
programs/merkle-distributor/src/instructions/: claim_locked.rs  clawback.rs  close_distributor.rs  mod.rs  new_claim.rs  new_distributor.rs  set_activation_point.rs  set_activation_slot.rs  set_activation_timestamp.rs
programs/merkle-distributor/src/instructions/admin/: clawback.rs  close_claim_status.rs  close_distributor.rs  create_canopy_tree.rs  distribute_vault.rs  fund_distributor_root.rs  fund_merkle_distributor_from_root.rs  mod.rs  new_distributor.rs  new_distributor_root.rs  new_parent_account.rs  set_activation_point.rs  set_admin.rs  set_clawback_receiver.rs  set_operator.rs
programs/merkle-distributor/src/instructions/claim/: claim_locked.rs  mod.rs  new_claim.rs
programs/merkle-distributor/src/instructions/claim_and_stake/: claim_locked_and_stake.rs  mod.rs  new_claim_and_stake.rs
programs/merkle-distributor/src/math/: mod.rs  safe_math.rs
programs/merkle-distributor/src/state/: canopy_tree.rs  claim_status.rs  distributor_root.rs  merkle_distributor.rs  mod.rs  parent_account.rs  partial_merkle_tree.rs
(+24 files in other folders)
