[package]
name = "merkle-distributor"
version = "0.1.0"
description = "A Solana program for distributing tokens according to a Merkle root."
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = "1.14.0"
jito-merkle-verify = { path = "../../verify" }
solana-program = "1.16.16"
solana-security-txt = "1.1.1"
num_enum = "0.7.1"